--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3095,6 +3095,11 @@ figcaption {
     margin-top: 30px;
 }
 
+.grid-navbar a img {
+    width: 90px;
+    height: 90px;
+}
+
 .nav-link {
     color: var(--color--white);
     margin: 15px;
